@@ -77,10 +77,12 @@ typedef struct _IdleData {
 	gint hue;
 	gint saturation;
 	gchar video_format[64];
+	gchar video_codec[16];
 	gchar video_fps[16];
 	gchar video_bitrate[16];
 	gchar audio_codec[16];
 	gchar audio_bitrate[16];
+	gchar audio_samplerate[16];
 } IdleData;
 
 IdleData *idledata;
