@@ -1060,11 +1060,24 @@ void menuitem_details_callback(GtkMenuItem * menuitem, void *data)
 		gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
 		gtk_misc_set_padding(GTK_MISC(label),12,0);
 		gtk_table_attach_defaults(GTK_TABLE(details_table), label, 0, 1, i, i + 1);
-		label = gtk_label_new(idle->video_format);
+		buf = g_ascii_strup(idle->video_format,-1);
+		label = gtk_label_new(buf);
+		g_free(buf);
 		gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
 		gtk_table_attach_defaults(GTK_TABLE(details_table), label, 1, 2, i, i + 1);
 		i++;
 
+		label = gtk_label_new(_("Video Codec:"));
+		gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
+		gtk_misc_set_padding(GTK_MISC(label),12,0);
+		gtk_table_attach_defaults(GTK_TABLE(details_table), label, 0, 1, i, i + 1);
+		buf = g_ascii_strup(idle->video_codec,-1);
+		label = gtk_label_new(buf);
+		g_free(buf);
+		gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
+		gtk_table_attach_defaults(GTK_TABLE(details_table), label, 1, 2, i, i + 1);
+		i++;
+		
 		label = gtk_label_new(_("Video FPS:"));
 		gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
 		gtk_misc_set_padding(GTK_MISC(label),12,0);
@@ -1078,7 +1091,9 @@ void menuitem_details_callback(GtkMenuItem * menuitem, void *data)
 		gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
 		gtk_misc_set_padding(GTK_MISC(label),12,0);
 		gtk_table_attach_defaults(GTK_TABLE(details_table), label, 0, 1, i, i + 1);
-		label = gtk_label_new(idle->video_bitrate);
+		buf = g_strdup_printf("%i Kb/s",(gint)(g_strtod(idle->video_bitrate, NULL) / 1024));
+		label = gtk_label_new(buf);
+		g_free(buf);
 		gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
 		gtk_table_attach_defaults(GTK_TABLE(details_table), label, 1, 2, i, i + 1);
 		i++;
@@ -1101,7 +1116,9 @@ void menuitem_details_callback(GtkMenuItem * menuitem, void *data)
 	gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
 	gtk_misc_set_padding(GTK_MISC(label),12,0);
     gtk_table_attach_defaults(GTK_TABLE(details_table), label, 0, 1, i, i + 1);
-	label = gtk_label_new(idle->audio_codec);
+	buf = g_ascii_strup(idle->audio_codec,-1);
+	label = gtk_label_new(buf);
+	g_free(buf);
 	gtk_widget_set_size_request(label,100,-1);
 	gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
     gtk_table_attach_defaults(GTK_TABLE(details_table), label, 1, 2, i, i + 1);
@@ -1112,7 +1129,20 @@ void menuitem_details_callback(GtkMenuItem * menuitem, void *data)
 	gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
 	gtk_misc_set_padding(GTK_MISC(label),12,0);
     gtk_table_attach_defaults(GTK_TABLE(details_table), label, 0, 1, i, i + 1);
-	label = gtk_label_new(idle->audio_bitrate);
+	buf = g_strdup_printf("%i Kb/s",(gint)(g_strtod(idle->audio_bitrate, NULL) / 1024));
+	label = gtk_label_new(buf);
+	g_free(buf);
+	gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
+    gtk_table_attach_defaults(GTK_TABLE(details_table), label, 1, 2, i, i + 1);
+	i++;
+
+	label = gtk_label_new(_("Audio Sample Rate:"));
+	gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
+	gtk_misc_set_padding(GTK_MISC(label),12,0);
+    gtk_table_attach_defaults(GTK_TABLE(details_table), label, 0, 1, i, i + 1);
+	buf = g_strdup_printf("%i Kb/s",(gint)(g_strtod(idle->audio_samplerate, NULL) / 1024));
+	label = gtk_label_new(buf);
+	g_free(buf);
 	gtk_misc_set_alignment(GTK_MISC(label), 0.0, 0.0);
     gtk_table_attach_defaults(GTK_TABLE(details_table), label, 1, 2, i, i + 1);
 	i++;
